--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.generate-ddl=true
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.suffix=.ftlx
+
+upload.path=/C:/1
